/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.elastic.proto;

option java_package = "com.dremio.elastic.proto";
option java_outer_classname = "ElasticReaderProto";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

message ElasticAnnotation {
  repeated string path = 1;
  optional bool analyzed = 2;
  optional bool doc_value_missing = 3;
  repeated string date_formats = 4;
  optional ElasticSpecialType special_type = 5;
  optional bool normalized = 6;
  optional bool not_indexed = 7;
}

// Subset of types to handle special type handling needs.
enum ElasticSpecialType {
  UNKNOWN = 0;
  GEO_SHAPE = 1;
  IP_TYPE = 2;
  GEO_POINT = 3;
  NESTED = 4;
  SCALED_FLOAT = 5;
}

message ElasticTableXattr {
  optional string resource = 1;
  repeated ElasticAnnotation annotation = 2;
  optional string alias_filter = 3;
  optional int32 mapping_hash = 4; // used to confirm a change in mapping.
  optional bool variation_detected = 5;
}

message ElasticSplitXattr {
  optional string resource = 1;
  optional int32 shard = 2;
}
